just fix the href and src

--- a/about.html
+++ b/about.html
@@ -39,32 +39,32 @@
       <ul class="nav_links">
         <li><a href="./about.html">Giới thiệu</a></li>
         <li>
-          <a href="/destination.html">Điểm đến</a>
+          <a href="./destination.html">Điểm đến</a>
           <div class="sub_menu">
             <ul>
-              <li><a href="/des-domestic.html">Du lịch trong nước</a>
+              <li><a href="./des-domestic.html">Du lịch trong nước</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
-                    <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
-                    <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
+                    <li><a href="./destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+                    <li><a href="./destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+                    <li><a href="./destinations/sub_domestic/miennam.html">Miền Nam</a></li>
                   </ul>
                 </div>
               </li>
-              <li><a href="des-oversea.html">Du lịch nước ngoài</a>
+              <li><a href="./des-oversea.html">Du lịch nước ngoài</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
-                    <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                    <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
+                    <li><a href="./destinations/sub_overseas/asian.html">Châu Á</a></li>
+                    <li><a href="./destinations/sub_overseas/europe.html">Châu Âu</a></li>
+                    <li><a href="./destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
                   </ul>
                 </div>
               </li>
             </ul>
           </div>
         </li>
-        <li><a href="contact.html">Liên hệ</a></li>
-        <li><a href="news.html">Tin tức</a></li>
+        <li><a href="./contact.html">Liên hệ</a></li>
+        <li><a href="./news.html">Tin tức</a></li>
       </ul>
     </nav>
   </header>
@@ -74,7 +74,7 @@
     <div class="hero-content">
       <h1>Giới thiệu</h1>
       <div class="breadcrumb">
-        <a href="index.html">Trang chủ</a> > Giới thiệu
+        <a href="./index.html">Trang chủ</a> > Giới thiệu
       </div>
     </div>
   </section>
@@ -112,10 +112,10 @@
           </span>
         </div>
       </div>
-      <a href="destination.html" class="btn">Booking Now</a>
+      <a href="./destination.html" class="btn">Booking Now</a>
     </div>
     <div>
-      <img src="img/about/ab1.png" alt="ab1" width="650px">
+      <img src="./img/about/ab1.png" alt="ab1" width="650px">
     </div>
   </section>
   <!-- Travel Section -->
@@ -137,36 +137,36 @@
     </div>
     <div class="expert-list">
       <div class="expert-item">
-        <img src="/img/about/team1.jpg" alt="Expert 1" class="expert-img" />
+        <img src="./img/about/team1.jpg" alt="Expert 1" class="expert-img" />
         <h3>Lê Hải Nam</h3>
         <p>Founder & CEO</p>
         <div class="social-icons">
-          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100039786919688"><i class="fa-brands fa-facebook-f"></i></a>
           <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
           <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-github"></i></i></a>
+          <a href="https://github.com/lehainam-05"><i class="fa-brands fa-github"></i></i></a>
         </div>
       </div>
       <div class="expert-item">
-        <img src="/img/about/team2.jpg" alt="Expert 2" class="expert-img" />
+        <img src="./img/about/team2.jpg" alt="Expert 2" class="expert-img" />
         <h3>Nguyễn Thuỳ Linh</h3>
         <p>Founder & CEO</p>
         <div class="social-icons">
-          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/thuy.linhh.3192"><i class="fa-brands fa-facebook-f"></i></a>
           <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
           <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-github"></i></i></a>
+          <a href="https://github.com/linhhtunn"><i class="fa-brands fa-github"></i></i></a>
         </div>
       </div>
       <div class="expert-item">
-        <img src="/img/about/team3.jpg" alt="Expert 3" class="expert-img" />
+        <img src="./img/about/team3.jpg" alt="Expert 3" class="expert-img" />
         <h3>Nguyễn Đắc Tuấn Nghĩa</h3>
         <p>Founder & CEO</p>
         <div class="social-icons">
-          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/ducknghia/"><i class="fa-brands fa-facebook-f"></i></a>
           <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
           <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-github"></i></i></a>
+          <a href="https://github.com/dacnghia-lx"><i class="fa-brands fa-github"></i></i></a>
         </div>
       </div>
     </div>
