--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
         <p class = "add_contact">084 647 7222</p>
         <p class = "add_rcm2">Yêu cầu thông tin về một chuyến đi?</p>
         <p class="add_contact">res@bookingtravel.com.vn</p>
-        <img class="pic1" src="img/news1/team.png" alt="picteam">
+        <img class="pic1" src="img/news/news1/team.png" alt="picteam">
       </div>
 
     </section>
