--- a/des-domestic.html
+++ b/des-domestic.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <header>
-    <div><img class="logo" src="img/logo.svg" alt="logo" /></div>
+    <div><img class="logo" src="./img/logo.svg" alt="logo" /></div>
     <div class="menu-toggle" id="menu-toggle">
         <i class="fa fa-bars"></i>
       </div>
@@ -36,32 +36,32 @@
       <ul class="nav_links">
         <li><a href="./about.html">Giới thiệu</a></li>
         <li>
-          <a href="/destination.html">Điểm đến</a>
+          <a href="./destination.html">Điểm đến</a>
           <div class="sub_menu">
             <ul>
-              <li><a href="/des-domestic.html">Du lịch trong nước</a>
+              <li><a href="./des-domestic.html">Du lịch trong nước</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
-                    <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
-                    <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
+                    <li><a href="./destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+                    <li><a href="./destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+                    <li><a href="./destinations/sub_domestic/miennam.html">Miền Nam</a></li>
                   </ul>
                 </div>
               </li>
-              <li><a href="des-oversea.html">Du lịch nước ngoài</a>
+              <li><a href="./des-oversea.html">Du lịch nước ngoài</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
-                    <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                    <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
+                    <li><a href="./destinations/sub_overseas/asian.html">Châu Á</a></li>
+                    <li><a href="./destinations/sub_overseas/europe.html">Châu Âu</a></li>
+                    <li><a href="./destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
                   </ul>
                 </div>
               </li>
             </ul>
           </div>
         </li>
-        <li><a href="contact.html">Liên hệ</a></li>
-        <li><a href="news.html">Tin tức</a></li>
+        <li><a href="./contact.html">Liên hệ</a></li>
+        <li><a href="./news.html">Tin tức</a></li>
       </ul>
     </nav>
   </header>
@@ -71,8 +71,8 @@
         <div class="hero-content">
             <h1>Điểm đến</h1>
             <div class="breadcrumb">
-                <a href="index.html">Trang chủ</a> >
-                <a href="./destination.html">Điểm đến</a> >
+                <a href="./index.html">Trang chủ</a> &gt;
+                <a href="./destination.html">Điểm đến</a> &gt;
                 Trong nước
             </div>
         </div>
@@ -134,7 +134,7 @@
         <section class="tour-list" id="tour-list">
         <!-- Tour Bắc -->
               <div class="tour-card" data-budget="under5" data-departure="Hà Nội" data-type="vip" data-destination="Hà Giang">
-                <img src="/img/info/des_banner/hagiang.png" alt="Tour Hà Giang">
+                <img src="./img/info/des_banner/hagiang.png" alt="Tour Hà Giang">
                 <div class="tour-info">
                   <div>
                     <h3>Hà Giang - Lũng Cú - Đồng Văn</h3>
@@ -166,7 +166,7 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="destinations/domestic/hagiang-lungcu-dongvan.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/domestic/hagiang-lungcu-dongvan.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
@@ -205,14 +205,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">2.890.000 <span>đ</span></div>
-                    <button><a href="destinations/domestic/sapa_3_ngay_2_dem.html" target="_blank">Xem chi tiết</a></button>
+                    <button><a href="./destinations/domestic/sapa_3_ngay_2_dem.html" target="_blank">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
               <!-- Tour 3 -->
               <div class="tour-card" data-budget="under5" data-departure="Hà Nội" data-type="budget" data-destination="Hạ Long">
-                <img src="/img/info/des_banner/halong.jpg" alt="Tour Vịnh Hạ Long">
+                <img src="./img/info/des_banner/halong.jpg" alt="Tour Vịnh Hạ Long">
                 <div class="tour-info">
                   <div>
                     <h3>Vịnh Hạ Long</h3>
@@ -244,14 +244,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">4.500.000 <span>đ</span></div>
-                    <button><a href="destinations/domestic/vinh_ha_long.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/domestic/vinh_ha_long.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
               <!-- Tour 1 -->
               <div class="tour-card" data-budget="5to10" data-departure="Hà Nội" data-type="budget" data-destination="Đà Lạt">
-                <img src="/img/info/des_banner/dalat.png" alt="Tour Đà Lạt">
+                <img src="./img/info/des_banner/dalat.png" alt="Tour Đà Lạt">
                 <div class="tour-info">
                   <div>
                     <h3>Đà Lạt</h3>
@@ -283,14 +283,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">4.990.000 <span>đ</span></div>
-                    <button><a href="destinations/domestic/da_lat.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/domestic/da_lat.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
               <!-- Tour 1 -->
               <div class="tour-card" data-budget="5to10" data-departure="Hà Nội" data-type="budget" data-destination="Cao Bằng">
-                <img src="/img/info/des_banner/caobang.png" alt="Tour Cao Bằng">
+                <img src="./img/info/des_banner/caobang.png" alt="Tour Cao Bằng">
                 <div class="tour-info">
                   <div>
                     <h3>Cao Bằng - Thác Bản Giốc - Ba Bề</h3>
@@ -322,14 +322,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">4.290.000 <span>đ</span></div>
-                    <button><a href="destinations/domestic/cao_bang_thac_ban_gioc_be_be.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/domestic/cao_bang_thac_ban_gioc_be_be.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
               <!-- Tour 6 -->
               <div class="tour-card" data-budget="5to10" data-departure="Hà Nội" data-type="budget" data-destination="Đà Nẵng">
-                <img src="/img/info/des_banner/danang.png" alt="Tour Đà Nẵng">
+                <img src="./img/info/des_banner/danang.png" alt="Tour Đà Nẵng">
                 <div class="tour-info">
                   <div>
                     <h3>Đà Nẵng</h3>
@@ -361,14 +361,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">5.290.000<span>đ</span></div>
-                    <button><a href="destinations/domestic/da_nang.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/domestic/da_nang.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
               <!-- Tour 7 -->
               <div class="tour-card" data-budget="under5" data-departure="Hà Nội" data-type="budget" data-destination="Tây Ninh">
-                <img src="/img/info/des_banner/tayning.png" alt="Tour Tây Ninh">
+                <img src="./img/info/des_banner/tayning.png" alt="Tour Tây Ninh">
                 <div class="tour-info">
                   <div>
                     <h3>Caravan Sinh Thái: Vườn quốc gia Nam Cát Tiên - Thiên nhiên vẫy gọi</h3>
@@ -400,14 +400,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="destinations/domestic/tay_ninh.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/domestic/tay_ninh.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
               <!--Tour 9-->
               <div class="tour-card" data-budget="under5" data-departure="Hà Nội" data-type="budget" data-destination="Yên Bái">
-                <img src="/img/info/des_banner/yenbai.png" alt="Tour Yên Bái">
+                <img src="./img/info/des_banner/yenbai.png" alt="Tour Yên Bái">
                 <div class="tour-info">
                   <div>
                     <h3>Yên Bái - Mù Cang Chải - Nghĩa Lộ - Tân Sơn - “Check In” Đồi Mâm Xôi</h3>
@@ -439,14 +439,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">3.990.000<span>đ</span></div>
-                    <button><a href="destinations/domestic/yen_bai_mu_cang_chai.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/domestic/yen_bai_mu_cang_chai.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
               <!--Tour 11-->
               <div class="tour-card" data-budget="under5" data-departure="Hà Nội" data-type="budget" data-destination="Sapa">
-                <img src="/img/info/des_banner/sapa-laocai.png" alt="Tour Sapa - Lào Cai - Hà Nội - Hạ Long">
+                <img src="./img/info/des_banner/sapa-laocai.png" alt="Tour Sapa - Lào Cai - Hà Nội - Hạ Long">
                 <div class="tour-info">
                   <div>
                     <h3>Sapa - Lào Cai - Hà Nội - Yên Tử - Hạ Long</h3>
@@ -478,14 +478,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="destinations/domestic/sapa_lao_cai_ha_noi_yen_tu_ha_long.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/domestic/sapa_lao_cai_ha_noi_yen_tu_ha_long.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
               <!--Tour 12-->
               <div class="tour-card" data-budget="under5" data-departure="Hà Nội" data-type="budget" data-destination="Quảng Ninh">
-                <img src="/img/info/des_banner/quangninh.png" alt="Tour Quảng Ninh">
+                <img src="./img/info/des_banner/quangninh.png" alt="Tour Quảng Ninh">
                 <div class="tour-info">
                   <div>
                     <h3>Quảng Ninh - Ninh Bình - Hà Nội Vịnh Lan Hạ - Yên Tử Chùa Bái Đính</h3>
@@ -517,7 +517,7 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="destinations/domestic/quang_ninh.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/domestic/quang_ninh.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
@@ -541,33 +541,33 @@
         <p>(+84) 034 958 0476</p>
         <p>(+84) 034 958 0416</p>
         <div class="social-icons">
-          <img src="img/footer/social/face.svg" />
-          <img src="img/footer/social/ins.svg" />
-          <img src="img/footer/social/messenger.svg" />
-          <img src="img/footer/social/tiktok.svg" />
+          <img src="./img/footer/social/face.svg" />
+          <img src="./img/footer/social/ins.svg" />
+          <img src="./img/footer/social/messenger.svg" />
+          <img src="./img/footer/social/tiktok.svg" />
         </div>
       </div>
       <div class="footer-section">
         <h4>Thông tin</h4>
         <ul>
-          <li><a href="about.html" target="_blank">Giới thiệu</li></a>
-          <li><a href="news.html" target="_blank">Tin tức</li></a>
-          <li><a href="contact.html" target="_blank">Liên Hệ</li></a>
+          <li><a href="./about.html" target="_blank">Giới thiệu</a></li>
+          <li><a href="./news.html" target="_blank">Tin tức</a></li>
+          <li><a href="./contact.html" target="_blank">Liên Hệ</a></li>
         </ul>
       </div>
       <div class="footer-section">
         <h4>Dịch vụ</h4>
-        <strong><a href="des-domestic.html">Du lịch trong nước</a></strong>
+        <strong><a href="./des-domestic.html">Du lịch trong nước</a></strong>
         <ul>
-          <li><a href="destinations/sub_domestic/mienbac.html">Miền Bắc</li></a>
-          <li><a href="destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
-          <li><a href="destinations/sub_domestic/miennam.html">Miền Nam</li></a>
+          <li><a href="./destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+          <li><a href="./destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+          <li><a href="./destinations/sub_domestic/miennam.html">Miền Nam</a></li>
         </ul>
-        <strong><a href="des-oversea.html">Du lịch nước ngoài</a></strong>
+        <strong><a href="./des-oversea.html">Du lịch nước ngoài</a></strong>
         <ul>
-          <li><a href="destinations/sub_overseas/europe.html">Châu Âu</li></a>
-          <li><a href="destinations/sub_overseas/asia.html">Châu Á</li></a>
-          <li><a href="destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
+          <li><a href="./destinations/sub_overseas/europe.html">Châu Âu</a></li>
+          <li><a href="./destinations/sub_overseas/asia.html">Châu Á</a></li>
+          <li><a href="./destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
         </ul>
       </div>
 
@@ -576,47 +576,18 @@
         <div class="subscribe-box">
           <input id="email-input" type="email" placeholder="Your email" />
           <button id="submit-button" style="background: none; border: none; padding: 0;">
-            <img src="img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
+            <img src="./img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
           </button>
         </div>
         <div id="message" style="margin-top: 8px; font-size: 14px;"></div>
         <script src="js/footer.js"></script>
         <h4>Chấp nhận thanh toán</h4>
         <div class="payment-icons">
-          <img src="img/footer/icon.png" />
+          <img src="./img/footer/icon.png" />
         </div>
       </div>
     </footer>
-    <script src="js/script.js"></script>
     <script src="js/responsive.js"></script>
-    <script>
-    // Bộ lọc tour
-    document.getElementById('filterForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      // Budget
-      let budget = null;
-      document.querySelectorAll('.toggle-buttons[data-group="budget"] .toggle-btn').forEach(btn => {
-        if (btn.classList.contains('active')) budget = btn.getAttribute('data-value');
-      });
-      // Departure
-      let departure = document.querySelectorAll('.sel')[0].value;
-      // Destination
-      let destination = document.getElementById('destination-filter').value;
-      // Type
-      let type = null;
-      document.querySelectorAll('.toggle-buttons[data-group="type"] .toggle-btn').forEach(btn => {
-        if (btn.classList.contains('active')) type = btn.getAttribute('data-value');
-      });
-
-      document.querySelectorAll('#tour-list .tour-card').forEach(card => {
-        let match = true;
-        if (budget && card.getAttribute('data-budget') !== budget) match = false;
-        if (departure !== 'Tất cả' && card.getAttribute('data-departure') !== departure) match = false;
-        if (destination !== 'Tất cả' && card.getAttribute('data-destination') !== destination) match = false;
-        if (type && card.getAttribute('data-type') !== type) match = false;
-        card.style.display = match ? '' : 'none';
-      });
-    });
-    </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
