--- a/des-oversea.html
+++ b/des-oversea.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <header>
-    <div><img class="logo" src="img/logo.svg" alt="logo" /></div>
+    <div><img class="logo" src="./img/logo.svg" alt="logo" /></div>
     <div class="menu-toggle" id="menu-toggle">
         <i class="fa fa-bars"></i>
       </div>
@@ -36,32 +36,32 @@
       <ul class="nav_links">
         <li><a href="./about.html">Giới thiệu</a></li>
         <li>
-          <a href="/destination.html">Điểm đến</a>
+          <a href="./destination.html">Điểm đến</a>
           <div class="sub_menu">
             <ul>
-              <li><a href="/des-domestic.html">Du lịch trong nước</a>
+              <li><a href="./des-domestic.html">Du lịch trong nước</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
-                    <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
-                    <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
+                    <li><a href="./destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+                    <li><a href="./destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+                    <li><a href="./destinations/sub_domestic/miennam.html">Miền Nam</a></li>
                   </ul>
                 </div>
               </li>
-              <li><a href="des-oversea.html">Du lịch nước ngoài</a>
+              <li><a href="./des-oversea.html">Du lịch nước ngoài</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
-                    <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                    <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
+                    <li><a href="./destinations/sub_overseas/asian.html">Châu Á</a></li>
+                    <li><a href="./destinations/sub_overseas/europe.html">Châu Âu</a></li>
+                    <li><a href="./destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
                   </ul>
                 </div>
               </li>
             </ul>
           </div>
         </li>
-        <li><a href="contact.html">Liên hệ</a></li>
-        <li><a href="news.html">Tin tức</a></li>
+        <li><a href="./contact.html">Liên hệ</a></li>
+        <li><a href="./news.html">Tin tức</a></li>
       </ul>
     </nav>
   </header>
@@ -71,8 +71,8 @@
         <div class="hero-content">
             <h1>Điểm đến</h1>
             <div class="breadcrumb">
-                <a href="index.html">Trang chủ</a> >
-                <a href="./destination.html">Điểm đến</a> >
+                <a href="./index.html">Trang chủ</a> &gt;
+                <a href="./destination.html">Điểm đến</a> &gt;
                 Nước ngoài
             </div>
         </div>
@@ -125,7 +125,7 @@
         <section class="tour-list" id="tour-list">
             <!-- Tour 1: Châu Á -->
             <div class="tour-card" data-budget="20to50" data-departure="Hà Nội" data-type="standard" data-destination="Châu Á">
-                <img src="/img/info/des_banner/tokyo.jpg" alt="Tour Tokyo">
+                <img src="./img/info/des_banner/tokyo.jpg" alt="Tour Tokyo">
                 <div class="tour-info">
                   <div>
                     <h3>Tokyo - Thành phố hiện đại và truyền thống</h3>
@@ -157,14 +157,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">25.000.000 <span>đ</span></div>
-                    <button><a href="destinations/oversea/tokyo.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/oversea/tokyo.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiêu chuẩn</div>
             </div>
             <!-- Tour 2: Châu Âu -->
             <div class="tour-card" data-budget="20to50" data-departure="Hà Nội" data-type="vip" data-destination="Châu Âu">
-                <img src="/img/info/des_banner/paris.jpg" alt="Tour Paris">
+                <img src="./img/info/des_banner/paris.jpg" alt="Tour Paris">
                 <div class="tour-info">
                   <div>
                     <h3>Paris - Kinh đô ánh sáng</h3>
@@ -196,14 +196,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">45.000.000 <span>đ</span></div>
-                    <button><a href="destinations/oversea/paris.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/oversea/paris.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Cao cấp</div>
             </div>
             <!-- Tour 3: Châu Mỹ -->
             <div class="tour-card" data-budget="50to100" data-departure="Hà Nội" data-type="vip" data-destination="Châu Mỹ">
-                <img src="/img/info/des_banner/newyork.jpg" alt="Tour New York">
+                <img src="./img/info/des_banner/newyork.jpg" alt="Tour New York">
                 <div class="tour-info">
                   <div>
                     <h3>New York - Thành phố không ngủ</h3>
@@ -235,14 +235,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">65.000.000 <span>đ</span></div>
-                    <button><a href="destinations/oversea/newyork.html">Xem chi tiết</a></button>
+                    <button><a href="./destinations/oversea/newyork.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Cao cấp</div>
             </div>
             <!-- Tour 4: Châu Á -->
             <div class="tour-card" data-budget="under20" data-departure="Hà Nội" data-type="standard" data-destination="Châu Á">
-                <img src="/img/info/des_banner/seoul.jpg" alt="Tour Seoul">
+                <img src="./img/info/des_banner/seoul.jpg" alt="Tour Seoul">
                 <div class="tour-info">
                     <div>
                         <h3>Seoul - Thành phố của những sắc màu</h3>
@@ -273,7 +273,7 @@
                     <div style="text-align: left;">Giá từ:</div>
                     <div class="tour-meta">
                         <div class="price">18.000.000 <span>đ</span></div>
-                        <button><a href="destinations/oversea/seoul.html">Xem chi tiết</a></button>
+                        <button><a href="./destinations/oversea/seoul.html">Xem chi tiết</a></button>
                     </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiêu chuẩn</div>
@@ -281,7 +281,7 @@
 
             <!-- Tour 5: Châu Âu -->
             <div class="tour-card" data-budget="50to100" data-departure="Hà Nội" data-type="vip" data-destination="Châu Âu">
-                <img src="/img/info/des_banner/rome.jpg" alt="Tour Rome">
+                <img src="./img/info/des_banner/rome.jpg" alt="Tour Rome">
                 <div class="tour-info">
                     <div>
                         <h3>Rome - Thành phố vĩnh hằng</h3>
@@ -312,7 +312,7 @@
                     <div style="text-align: left;">Giá từ:</div>
                     <div class="tour-meta">
                         <div class="price">50.000.000 <span>đ</span></div>
-                        <button><a href="destinations/oversea/rome.html">Xem chi tiết</a></button>
+                        <button><a href="./destinations/oversea/rome.html">Xem chi tiết</a></button>
                     </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Cao cấp</div>
@@ -320,7 +320,7 @@
 
             <!-- Tour 6: Châu Mỹ -->
             <div class="tour-card" data-budget="50to100" data-departure="Hà Nội" data-type="vip" data-destination="Châu Mỹ">
-                <img src="/img/info/des_banner/rio.jpg" alt="Tour Rio de Janeiro">
+                <img src="./img/info/des_banner/rio.jpg" alt="Tour Rio de Janeiro">
                 <div class="tour-info">
                     <div>
                         <h3>Rio de Janeiro - Thành phố lễ hội</h3>
@@ -351,14 +351,14 @@
                     <div style="text-align: left;">Giá từ:</div>
                     <div class="tour-meta">
                         <div class="price">70.000.000 <span>đ</span></div>
-                        <button><a href="#">Xem chi tiết</a></button>
+                        <button><a href="./destinations/oversea/rio.html">Xem chi tiết</a></button>
                     </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Cao cấp</div>
             </div>
             <!-- Tour 7: Châu Á -->
             <div class="tour-card" data-budget="under20" data-departure="Hà Nội" data-type="budget" data-destination="Châu Á">
-                <img src="/img/info/des_banner/bangkok.jpg" alt="Tour Bangkok">
+                <img src="./img/info/des_banner/bangkok.jpg" alt="Tour Bangkok">
                 <div class="tour-info">
                     <div>
                         <h3>Bangkok - Thành phố của những nụ cười</h3>
@@ -397,7 +397,7 @@
 
             <!-- Tour 8: Châu Âu -->
             <div class="tour-card" data-budget="50to100" data-departure="Hà Nội" data-type="standard" data-destination="Châu Âu">
-                <img src="/img/info/des_banner/london.jpg" alt="Tour London">
+                <img src="./img/info/des_banner/london.jpg" alt="Tour London">
                 <div class="tour-info">
                     <div>
                         <h3>London - Thành phố sương mù</h3>
@@ -436,7 +436,7 @@
 
             <!-- Tour 9: Châu Mỹ -->
             <div class="tour-card" data-budget="50to100" data-departure="Hà Nội" data-type="vip" data-destination="Châu Mỹ">
-                <img src="/img/info/des_banner/losangeles.jpg" alt="Tour Los Angeles">
+                <img src="./img/info/des_banner/losangeles.jpg" alt="Tour Los Angeles">
                 <div class="tour-info">
                     <div>
                         <h3>Los Angeles - Thành phố thiên thần</h3>
@@ -467,7 +467,7 @@
                     <div style="text-align: left;">Giá từ:</div>
                     <div class="tour-meta">
                         <div class="price">65.000.000 <span>đ</span></div>
-                        <button><a href="#">Xem chi tiết</a></button>
+                        <button><a href="./destinations/oversea/los_angeles.html">Xem chi tiết</a></button>
                     </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Cao cấp</div>
@@ -475,7 +475,7 @@
 
             <!-- Tour 10: Châu Á -->
             <div class="tour-card" data-budget="under20" data-departure="Hà Nội" data-type="budget" data-destination="Châu Á">
-                <img src="/img/info/des_banner/singapore.jpg" alt="Tour Singapore">
+                <img src="./img/info/des_banner/singapore.jpg" alt="Tour Singapore">
                 <div class="tour-info">
                     <div>
                         <h3>Singapore - Đảo quốc sư tử</h3>
@@ -530,33 +530,33 @@
         <p>(+84) 034 958 0476</p>
         <p>(+84) 034 958 0416</p>
         <div class="social-icons">
-          <img src="img/footer/social/face.svg" />
-          <img src="img/footer/social/ins.svg" />
-          <img src="img/footer/social/messenger.svg" />
-          <img src="img/footer/social/tiktok.svg" />
+          <img src="./img/footer/social/face.svg" />
+          <img src="./img/footer/social/ins.svg" />
+          <img src="./img/footer/social/messenger.svg" />
+          <img src="./img/footer/social/tiktok.svg" />
         </div>
       </div>
       <div class="footer-section">
         <h4>Thông tin</h4>
         <ul>
-          <li><a href="about.html" target="_blank">Giới thiệu</li></a>
-          <li><a href="news.html" target="_blank">Tin tức</li></a>
-          <li><a href="contact.html" target="_blank">Liên Hệ</li></a>
+          <li><a href="./about.html" target="_blank">Giới thiệu</a></li>
+          <li><a href="./news.html" target="_blank">Tin tức</a></li>
+          <li><a href="./contact.html" target="_blank">Liên Hệ</a></li>
         </ul>
       </div>
       <div class="footer-section">
         <h4>Dịch vụ</h4>
-        <strong><a href="des-domestic.html">Du lịch trong nước</a></strong>
+        <strong><a href="./des-domestic.html">Du lịch trong nước</a></strong>
         <ul>
-          <li><a href="destinations/sub_domestic/mienbac.html">Miền Bắc</li></a>
-          <li><a href="destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
-          <li><a href="destinations/sub_domestic/miennam.html">Miền Nam</li></a>
+          <li><a href="./destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+          <li><a href="./destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+          <li><a href="./destinations/sub_domestic/miennam.html">Miền Nam</a></li>
         </ul>
-        <strong><a href="des-oversea.html">Du lịch nước ngoài</a></strong>
+        <strong><a href="./des-oversea.html">Du lịch nước ngoài</a></strong>
         <ul>
-          <li><a href="destinations/sub_overseas/europe.html">Châu Âu</li></a>
-          <li><a href="destinations/sub_overseas/asia.html">Châu Á</li></a>
-          <li><a href="destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
+          <li><a href="./destinations/sub_overseas/europe.html">Châu Âu</a></li>
+          <li><a href="./destinations/sub_overseas/asia.html">Châu Á</a></li>
+          <li><a href="./destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
         </ul>
       </div>
   
@@ -565,48 +565,19 @@
         <div class="subscribe-box">
           <input id="email-input" type="email" placeholder="Your email" />
           <button id="submit-button" style="background: none; border: none; padding: 0;">
-            <img src="img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
+            <img src="./img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
           </button>
         </div>
         <div id="message" style="margin-top: 8px; font-size: 14px;"></div>
         <script src="js/footer.js"></script>
         <h4>Chấp nhận thanh toán</h4>
         <div class="payment-icons">
-          <img src="img/footer/icon.png" />
+          <img src="./img/footer/icon.png" />
         </div>
       </div>
     </footer>
   </footer>
     <script src="js/script.js"></script>
     <script src="js/responsive.js"></script>
-    <script>
-    // Bộ lọc tour cho trang nước ngoài
-    document.getElementById('filterForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      // Budget
-      let budget = null;
-      document.querySelectorAll('.toggle-buttons[data-group="budget"] .toggle-btn').forEach(btn => {
-        if (btn.classList.contains('active')) budget = btn.getAttribute('data-value');
-      });
-      // Departure
-      let departure = document.querySelectorAll('.sel')[0].value;
-      // Destination
-      let destination = document.querySelectorAll('.sel')[1].value;
-      // Type
-      let type = null;
-      document.querySelectorAll('.toggle-buttons[data-group="type"] .toggle-btn').forEach(btn => {
-        if (btn.classList.contains('active')) type = btn.getAttribute('data-value');
-      });
-
-      document.querySelectorAll('#tour-list .tour-card').forEach(card => {
-        let match = true;
-        if (budget && card.getAttribute('data-budget') !== budget) match = false;
-        if (departure !== 'Tất cả' && card.getAttribute('data-departure') !== departure) match = false;
-        if (destination !== 'Tất cả' && card.getAttribute('data-destination') !== destination) match = false;
-        if (type && card.getAttribute('data-type') !== type) match = false;
-        card.style.display = match ? '' : 'none';
-      });
-    });
-    </script>
 </body>
 </html>
