--- a/destinations/oversea/london.html
+++ b/destinations/oversea/london.html
@@ -3,56 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="57x57" href="/icon//apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/icon//apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/icon//apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/icon//apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/icon//apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/icon//apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/icon//apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/icon//apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icon//apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/icon//android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icon//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/icon//favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icon//favicon-16x16.png">
-    <link rel="manifest" href="/icon//manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="../../icon//apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../../icon//apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../../icon//apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../../icon//apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../../icon//apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../../icon//apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../../icon//apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../../icon//apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../icon//apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../../icon//android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../icon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../../icon//favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../icon//favicon-16x16.png">
+    <link rel="manifest" href="../../icon//manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="../../icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <title>London - Thành phố sương mù</title>
-    <link rel="stylesheet" href="/css/info.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="../../css/info.css">
+    <link rel="stylesheet" href="../../css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
-        <div><img class="logo" src="/img/logo.svg" alt="logo" /></div>
+        <div><a href="../../index.html"><img class="logo" src="../../img/logo.svg" alt="logo"/></a></div>
         <div class="menu-toggle" id="menu-toggle">
           <i class="fa fa-bars"></i>
         </div>
         <nav id="navbar">
           <ul class="nav_links">
-            <li><a href="/about.html">Giới thiệu</a></li>
+            <li><a href="../../about.html">Giới thiệu</a></li>
             <li>
               <a href="/destination.html">Điểm đến</a>
               <div class="sub_menu">
                 <ul>
-                  <li><a href="/des-domestic.html">Du lịch trong nước</a>
+                  <li><a href="../../des-domestic.html">Du lịch trong nước</a>
                     <div class="sub_menu_2">
                       <ul>
-                        <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
-                        <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
-                        <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
+                        <li><a href="../../destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+                        <li><a href="../../destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+                        <li><a href="../../destinations/sub_domestic/miennam.html">Miền Nam</a></li>
                       </ul>
                     </div>
                   </li>
-                  <li><a href="/des-oversea.html">Du lịch nước ngoài</a>
+                  <li><a href="../../des-oversea.html">Du lịch nước ngoài</a>
                     <div class="sub_menu_2">
                       <ul>
-                        <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
-                        <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                        <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
+                        <li><a href="../../destinations/sub_overseas/asian.html">Châu Á</a></li>
+                        <li><a href="../../destinations/sub_overseas/europe.html">Châu Âu</a></li>
+                        <li><a href="../../destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
                       </ul>
                     </div>
                   </li>
@@ -66,9 +66,9 @@
       </header>
     <nav class="breadcrumb">
         <ul>
-            <li><a href="/index.html">Trang chủ</a></li>
-            <li><a href="/destination.html">Tour Quốc tế</a></li>
-            <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
+            <li><a href="../../index.html">Trang chủ</a></li>
+            <li><a href="../../destination.html">Tour Quốc tế</a></li>
+            <li><a href="../../destinations/sub_overseas/europe.html">Châu Âu</a></li>
             <li>Chi tiết</li>
         </ul>
     </nav>
@@ -77,16 +77,16 @@
             <h2 id="tour-name">London - Khám phá thành phố sương mù</h2>
             <div class="slideshow-container">
                 <div class="slide fade">
-                    <img src="/img/info/des_banner/london.jpg" alt="London" style="width:100%">
+                    <img src="../../img/info/des_banner/london.jpg" alt="London" style="width:100%">
                 </div>
                 <div class="slide fade">
-                    <img src="/img/info/london_bigben.jpg" alt="Big Ben" style="width:100%">
+                    <img src="../../img/info/london_bigben.jpg" alt="Big Ben" style="width:100%">
                 </div>
                 <div class="slide fade">
-                    <img src="/img/info/london_towerbridge.jpg" alt="Tower Bridge" style="width:100%">
+                    <img src="../../img/info/london_towerbridge.jpg" alt="Tower Bridge" style="width:100%">
                 </div>
                 <div class="slide fade">
-                    <img src="/img/info/london_buckingham.jpg" alt="Buckingham Palace" style="width:100%">
+                    <img src="../../img/info/london_buckingham.jpg" alt="Buckingham Palace" style="width:100%">
                 </div>
                 <!-- Navigation buttons -->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -134,32 +134,32 @@
         <h3>THÔNG TIN THÊM VỀ CHUYẾN ĐI</h3>
         <div class="info-grid">
             <div class="info-item">
-                <img src="/img/info/icons/additional/location.svg" alt="Điểm tham quan">
+                <img src="../../img/info/icons/additional/location.svg" alt="Điểm tham quan">
                 <h4>Điểm tham quan</h4>
                 <p>Big Ben, Cầu Tower Bridge, Cung điện Buckingham, Bảo tàng Anh, London Eye</p>
             </div>
             <div class="info-item">
-                <img src="/img/info/icons/additional/food.svg" alt="Ẩm thực">
+                <img src="../../img/info/icons/additional/food.svg" alt="Ẩm thực">
                 <h4>Ẩm thực</h4>
                 <p>Fish & Chips, trà chiều Anh, bánh Shepherd's Pie, roast beef, pudding</p>
             </div>
             <div class="info-item">
-                <img src="/img/info/icons/additional/group.svg" alt="Đối tượng thích hợp">
+                <img src="../../img/info/icons/additional/group.svg" alt="Đối tượng thích hợp">
                 <h4>Đối tượng thích hợp</h4>
                 <p>Gia đình, bạn bè, nhóm trẻ, người yêu văn hóa Anh</p>
             </div>
             <div class="info-item">
-                <img src="/img/info/icons/additional/time.svg" alt="Thời gian lý tưởng">
+                <img src="../../img/info/icons/additional/time.svg" alt="Thời gian lý tưởng">
                 <h4>Thời gian lý tưởng</h4>
                 <p>Mùa xuân (tháng 4-6), mùa thu (tháng 9-11)</p>
             </div>
             <div class="info-item">
-                <img src="/img/info/icons/additional/transport.svg" alt="Phương tiện">
+                <img src="../../img/info/icons/additional/transport.svg" alt="Phương tiện">
                 <h4>Phương tiện</h4>
                 <p>Máy bay, tàu điện ngầm, xe bus 2 tầng</p>
             </div>
             <div class="info-item">
-                <img src="/img/info/icons/additional/promotion.svg" alt="Khuyến mãi">
+                <img src="../../img/info/icons/additional/promotion.svg" alt="Khuyến mãi">
                 <h4>Khuyến mãi</h4>
                 <p>Giảm giá nhóm, tặng vé tham quan London Eye</p>
             </div>
