--- a/destination.html
+++ b/destination.html
@@ -29,7 +29,7 @@
 
 <body>
   <header>
-    <div><img class="logo" src="img/logo.svg" alt="logo" /></div>
+    <div><img class="logo" src="./img/logo.svg" alt="logo" /></div>
     <div class="menu-toggle" id="menu-toggle">
         <i class="fa fa-bars"></i>
       </div>
@@ -37,32 +37,32 @@
       <ul class="nav_links">
         <li><a href="./about.html">Giới thiệu</a></li>
         <li>
-          <a href="/destination.html">Điểm đến</a>
+          <a href="./destination.html">Điểm đến</a>
           <div class="sub_menu">
             <ul>
-              <li><a href="/des-domestic.html">Du lịch trong nước</a>
+              <li><a href="./des-domestic.html">Du lịch trong nước</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
-                    <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
-                    <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
+                    <li><a href="./destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+                    <li><a href="./destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+                    <li><a href="./destinations/sub_domestic/miennam.html">Miền Nam</a></li>
                   </ul>
                 </div>
               </li>
-              <li><a href="des-oversea.html">Du lịch nước ngoài</a>
+              <li><a href="./des-oversea.html">Du lịch nước ngoài</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
-                    <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                    <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
+                    <li><a href="./destinations/sub_overseas/asian.html">Châu Á</a></li>
+                    <li><a href="./destinations/sub_overseas/europe.html">Châu Âu</a></li>
+                    <li><a href="./destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
                   </ul>
                 </div>
               </li>
             </ul>
           </div>
         </li>
-        <li><a href="contact.html">Liên hệ</a></li>
-        <li><a href="news.html">Tin tức</a></li>
+        <li><a href="./contact.html">Liên hệ</a></li>
+        <li><a href="./news.html">Tin tức</a></li>
       </ul>
     </nav>
   </header>
@@ -72,7 +72,7 @@
     <div class="hero-content">
       <h1>Điểm đến</h1>
       <div class="breadcrumb">
-        <a href="index.html">Trang chủ</a> >
+        <a href="./index.html">Trang chủ</a> &gt;
         Điểm đến
       </div>
     </div>
@@ -84,14 +84,14 @@
     <p>Điểm đến hấp dẫn</p>
     <section class="destination-box">
       <a href="./des-domestic.html" class="box">
-        <img src="/img/destinations/banner/domestic.png" alt="Trong nước"/>
+        <img src="./img/destinations/banner/domestic.png" alt="Trong nước"/>
         <div class="box-title">
           <h2>Trong nước</h2>
           <p>15 Tours+</p>
         </div>
       </a>
       <a href="./des-oversea.html" class="box">
-        <img src="/img/destinations/banner/overseas.png" alt="Nước ngoài" />
+        <img src="./img/destinations/banner/overseas.png" alt="Nước ngoài" />
         <div class="box-title">
           <h2>Nước ngoài</h2>
           <p>15 Tours+</p>
@@ -112,34 +112,33 @@
       <p>(+84) 034 958 0476</p>
       <p>(+84) 034 958 0416</p>
       <div class="social-icons">
-        <img src="img/footer/social/face.svg" />
-        <img src="img/footer/social/ins.svg" />
-        <img src="img/footer/social/messenger.svg" />
-        <img src="img/footer/social/tiktok.svg" />
+        <img src="./img/footer/social/face.svg" />
+        <img src="./img/footer/social/ins.svg" />
+        <img src="./img/footer/social/messenger.svg" />
+        <img src="./img/footer/social/tiktok.svg" />
       </div>
     </div>
     <div class="footer-section">
       <h4>Thông tin</h4>
       <ul>
-        <li><a href="about.html" target="_blank">Giới thiệu</li></a>
-        <li><a href="news.html" target="_blank">Tin tức</li></a>
-        <li><a href="contact.html" target="_blank">Liên Hệ</li></a>
+        <li><a href="./about.html" target="_blank">Giới thiệu</a></li>
+        <li><a href="./news.html" target="_blank">Tin tức</a></li>
+        <li><a href="./contact.html" target="_blank">Liên Hệ</a></li>
       </ul>
     </div>
     <div class="footer-section">
       <h4>Dịch vụ</h4>
-      <strong><a href="des-domestic.html">Du lịch trong nước</a></strong>
+      <strong><a href="./des-domestic.html">Du lịch trong nước</a></strong>
       <ul>
-        <li><a href="destinations/sub_domestic/mienbac.html">Miền Bắc</li></a>
-        <li><a href="destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
-        <li><a href="destinations/sub_domestic/miennam.html">Miền Nam</li></a>
+        <li><a href="./destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+        <li><a href="./destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+        <li><a href="./destinations/sub_domestic/miennam.html">Miền Nam</a></li>
       </ul>
-    </ul>
-    <strong><a href="des-oversea.html">Du lịch nước ngoài</a></strong>
+      <strong><a href="./des-oversea.html">Du lịch nước ngoài</a></strong>
       <ul>
-        <li><a href="destinations/sub_overseas/europe.html">Châu Âu</li></a>
-        <li><a href="destinations/sub_overseas/asia.html">Châu Á</li></a>
-        <li><a href="destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
+        <li><a href="./destinations/sub_overseas/europe.html">Châu Âu</a></li>
+        <li><a href="./destinations/sub_overseas/asia.html">Châu Á</a></li>
+        <li><a href="./destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
       </ul>
     </div>
 
@@ -148,14 +147,14 @@
       <div class="subscribe-box">
         <input id="email-input" type="email" placeholder="Your email" />
         <button id="submit-button" style="background: none; border: none; padding: 0;">
-          <img src="img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
+          <img src="./img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
         </button>
       </div>
       <div id="message" style="margin-top: 8px; font-size: 14px;"></div>
       <script src="js/footer.js"></script>
       <h4>Chấp nhận thanh toán</h4>
       <div class="payment-icons">
-        <img src="img/footer/icon.png" />
+        <img src="./img/footer/icon.png" />
       </div>
     </div>
   </footer>
