--- a/destinations/sub_domestic/miennam.html
+++ b/destinations/sub_domestic/miennam.html
@@ -12,56 +12,56 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/icon//apple-icon-120x120.png">
     <link rel="apple-touch-icon" sizes="144x144" href="/icon//apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/icon//apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icon//apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/icon//android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icon//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/icon//favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icon//favicon-16x16.png">
-    <link rel="manifest" href="/icon//manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../icon//apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../../icon//android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../icon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../../icon//favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../icon//favicon-16x16.png">
+    <link rel="manifest" href="../../icon//manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="../../icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="/css/style-des-domestic.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="../../css/style-des-domestic.css">
+    <link rel="stylesheet" href="../../css/responsive.css">
     <title>ChipTrip - Điểm đến Việt Nam</title>
 </head>
 <body>
   <header>
-    <div><img class="logo" src="/img/logo.svg" alt="logo" /></div>
+    <div><img class="logo" src="../../img/logo.svg" alt="logo" /></div>
     <div class="menu-toggle" id="menu-toggle">
       <i class="fa fa-bars"></i>
     </div>
     <nav id="navbar">
       <ul class="nav_links">
-        <li><a href="/about.html">Giới thiệu</a></li>
+        <li><a href="../../about.html">Giới thiệu</a></li>
         <li>
-          <a href="/destination.html">Điểm đến</a>
+          <a href="../../destination.html">Điểm đến</a>
           <div class="sub_menu">
             <ul>
-              <li><a href="/des-domestic.html">Du lịch trong nước</a>
+              <li><a href="../../des-domestic.html">Du lịch trong nước</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
-                    <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
-                    <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
+                    <li><a href="../../destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+                    <li><a href="../../destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+                    <li><a href="../../destinations/sub_domestic/miennam.html">Miền Nam</a></li>
                   </ul>
                 </div>
               </li>
-              <li><a href="des-oversea.html">Du lịch nước ngoài</a>
+              <li><a href="../../des-oversea.html">Du lịch nước ngoài</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
-                    <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                    <li><a href="/destinations/sub_overseas/america.html">Châu Mỹ</a></li>
+                    <li><a href="../../destinations/sub_overseas/asian.html">Châu Á</a></li>
+                    <li><a href="../../destinations/sub_overseas/europe.html">Châu Âu</a></li>
+                    <li><a href="../../destinations/sub_overseas/america.html">Châu Mỹ</a></li>
                   </ul>
                 </div>
               </li>
             </ul>
           </div>
         </li>
-        <li><a href="contact.html">Liên hệ</a></li>
-        <li><a href="news.html">Tin tức</a></li>
+        <li><a href="../../contact.html">Liên hệ</a></li>
+        <li><a href="../../news.html">Tin tức</a></li>
       </ul>
     </nav>
   </header>
@@ -71,8 +71,8 @@
         <div class="hero-content">
             <h1>Điểm đến</h1>
             <div class="breadcrumb">
-                <a href="index.html">Trang chủ</a> >
-                <a href="./destination.html">Điểm đến</a> >
+                <a href="../../index.html">Trang chủ</a> &gt;
+                <a href="../../destination.html">Điểm đến</a> &gt;
                 Trong nước
             </div>
         </div>
@@ -128,8 +128,12 @@
         <!-- Tour-list -->
         <section class="tour-list">
               <!-- Tour 7 -->
-              <div class="tour-card">
-                <img src="/img/info/des_banner/tayning.png" alt="Tour Tây Ninh">
+              <div class="tour-card"
+                data-budget="under5"
+                data-departure="Hà Nội"
+                data-type="budget"
+                data-destination="Tây Ninh">
+                <img src="../../img/info/des_banner/tayning.png" alt="Tour Tây Ninh">
                 <div class="tour-info">
                   <div>
                     <h3>Caravan Sinh Thái: Vườn quốc gia Nam Cát Tiên - Thiên nhiên vẫy gọi</h3>
@@ -168,8 +172,6 @@
               </div>
         </section>
     </main>
-    
-    <script src="js/des.js"></script>
 
     <!-- ################################# FOOTER ################################# -->
     <div class="footer-container"></div>
@@ -185,33 +187,33 @@
         <p>(+84) 034 958 0476</p>
         <p>(+84) 034 958 0416</p>
         <div class="social-icons">
-          <img src="img/footer/social/face.svg" />
-          <img src="img/footer/social/ins.svg" />
-          <img src="img/footer/social/messenger.svg" />
-          <img src="img/footer/social/tiktok.svg" />
+          <img src="../../img/footer/social/face.svg" />
+          <img src="../../img/footer/social/ins.svg" />
+          <img src="../../img/footer/social/messenger.svg" />
+          <img src="../../img/footer/social/tiktok.svg" />
         </div>
       </div>
       <div class="footer-section">
         <h4>Thông tin</h4>
         <ul>
-          <li><a href="about.html" target="_blank">Giới thiệu</li></a>
-          <li><a href="news.html" target="_blank">Tin tức</li></a>
-          <li><a href="contact.html" target="_blank">Liên Hệ</li></a>
+          <li><a href="../../about.html" target="_blank">Giới thiệu</a></li>
+          <li><a href="../../news.html" target="_blank">Tin tức</a></li>
+          <li><a href="../../contact.html" target="_blank">Liên Hệ</a></li>
         </ul>
       </div>
       <div class="footer-section">
         <h4>Dịch vụ</h4>
-        <strong><a href="des-domestic.html">Du lịch trong nước</a></strong>
+        <strong><a href="../../des-domestic.html">Du lịch trong nước</a></strong>
         <ul>
-          <li><a href="destinations/sub_domestic/mienbac.html">Miền Bắc</li></a>
-          <li><a href="destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
-          <li><a href="destinations/sub_domestic/miennam.html">Miền Nam</li></a>
+          <li><a href="../../destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+          <li><a href="../../destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+          <li><a href="../../destinations/sub_domestic/miennam.html">Miền Nam</a></li>
         </ul>
-        <strong><a href="des-oversea.html">Du lịch nước ngoài</a></strong>
+        <strong><a href="../../des-oversea.html">Du lịch nước ngoài</a></strong>
         <ul>
-          <li><a href="destinations/sub_overseas/europe.html">Châu Âu</li></a>
-          <li><a href="destinations/sub_overseas/asia.html">Châu Á</li></a>
-          <li><a href="destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
+          <li><a href="../../destinations/sub_overseas/europe.html">Châu Âu</a></li>
+          <li><a href="../../destinations/sub_overseas/asia.html">Châu Á</a></li>
+          <li><a href="../../destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
         </ul>
       </div>
 
@@ -220,18 +222,18 @@
         <div class="subscribe-box">
           <input id="email-input" type="email" placeholder="Your email" />
           <button id="submit-button" style="background: none; border: none; padding: 0;">
-            <img src="img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
+            <img src="../../img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
           </button>
         </div>
         <div id="message" style="margin-top: 8px; font-size: 14px;"></div>
-        <script src="js/footer.js"></script>
+        <script src="../../js/footer.js"></script>
         <h4>Chấp nhận thanh toán</h4>
         <div class="payment-icons">
-          <img src="img/footer/icon.png" />
+          <img src="../../img/footer/icon.png" />
         </div>
       </div>
     </footer>
-    <script src="/js/script.js"></script>
-    <script src="/js/responsive.js"></script>
+    <script src="../../js/script.js"></script>
+    <script src="../../js/des.js"></script>
 </body>
 </html>
