--- a/destinations/sub_domestic/mientrung.html
+++ b/destinations/sub_domestic/mientrung.html
@@ -4,64 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="57x57" href="./icon//apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./icon//apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./icon//apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./icon//apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./icon//apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./icon//apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./icon//apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./icon//apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./icon//apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="./icon//android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./icon//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./icon//favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./icon//favicon-16x16.png">
-    <link rel="manifest" href="./icon//manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="../../icon//apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../../icon//apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../../icon//apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../../icon//apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../../icon//apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../../icon//apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../../icon//apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../../icon//apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../icon//apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../../icon//android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../icon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../../icon//favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../icon//favicon-16x16.png">
+    <link rel="manifest" href="../../icon//manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="./icon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="../../icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="/css/style-des-domestic.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="../../css/style-des-domestic.css">
+    <link rel="stylesheet" href="../../css/responsive.css">
     <title>ChipTrip - Điểm đến Việt Nam</title>
 </head>
 <body>
   <header>
-    <div><img class="logo" src="/img/logo.svg" alt="logo" /></div>
+    <div><img class="logo" src="../../img/logo.svg" alt="logo" /></div>
     <div class="menu-toggle" id="menu-toggle">
       <i class="fa fa-bars"></i>
     </div>
     <nav id="navbar">
       <ul class="nav_links">
-        <li><a href="/about.html">Giới thiệu</a></li>
+        <li><a href="../../about.html">Giới thiệu</a></li>
         <li>
-          <a href="/destination.html">Điểm đến</a>
+          <a href="../../destination.html">Điểm đến</a>
           <div class="sub_menu">
             <ul>
-              <li><a href="/des-domestic.html">Du lịch trong nước</a>
+              <li><a href="../../des-domestic.html">Du lịch trong nước</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
-                    <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
-                    <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
+                    <li><a href="../../destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+                    <li><a href="../../destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+                    <li><a href="../../destinations/sub_domestic/miennam.html">Miền Nam</a></li>
                   </ul>
                 </div>
               </li>
-              <li><a href="/des-oversea.html">Du lịch nước ngoài</a>
+              <li><a href="../../des-oversea.html">Du lịch nước ngoài</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
-                    <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                    <li><a href="/destinations/sub_overseas/america.html">Châu Mỹ</a></li>
+                    <li><a href="../../destinations/sub_overseas/asian.html">Châu Á</a></li>
+                    <li><a href="../../destinations/sub_overseas/europe.html">Châu Âu</a></li>
+                    <li><a href="../../destinations/sub_overseas/america.html">Châu Mỹ</a></li>
                   </ul>
                 </div>
               </li>
             </ul>
           </div>
         </li>
-        <li><a href="/contact.html">Liên hệ</a></li>
-        <li><a href="/news.html">Tin tức</a></li>
+        <li><a href="../../contact.html">Liên hệ</a></li>
+        <li><a href="../../news.html">Tin tức</a></li>
       </ul>
     </nav>
   </header>
@@ -71,8 +71,8 @@
         <div class="hero-content">
             <h1>Điểm đến</h1>
             <div class="breadcrumb">
-                <a href="index.html">Trang chủ</a> >
-                <a href="./destination.html">Điểm đến</a> >
+                <a href="../../index.html">Trang chủ</a> &gt;
+                <a href="../../destination.html">Điểm đến</a> &gt;
                 Trong nước
             </div>
         </div>
@@ -127,8 +127,12 @@
         </aside>
         <!-- Tour-list -->
         <section class="tour-list">
-              <div class="tour-card">
-                <img src="/img/info/des_banner/dalat.png" alt="Tour Đà Lạt">
+              <div class="tour-card"
+                data-budget="under5"
+                data-departure="Hà Nội"
+                data-type="budget"
+                data-destination="Đà Lạt">
+                <img src="../../img/info/des_banner/dalat.png" alt="Tour Đà Lạt">
                 <div class="tour-info">
                   <div>
                     <h3>Đà Lạt</h3>
@@ -165,8 +169,12 @@
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiêu chuẩn</div>
               </div>
-              <div class="tour-card">
-                <img src="/img/info/des_banner/danang.png" alt="Tour Đà Nẵng">
+              <div class="tour-card"
+                data-budget="under5"
+                data-departure="Hà Nội"
+                data-type="budget"
+                data-destination="Đà Nẵng">
+                <img src="../../img/info/des_banner/danang.png" alt="Tour Đà Nẵng">
                 <div class="tour-info">
                   <div>
                     <h3>Đà Nẵng</h3>
@@ -206,7 +214,9 @@
         </section>
     </main>
     
-    <script src="js/des.js"></script>
+    <script src="../../js/footer.js"></script>
+    <script src="../../js/des.js"></script>
+    <script src="../../js/responsive.js"></script>
 
     <!-- ################################# FOOTER ################################# -->
     <div class="footer-container"></div>
@@ -222,10 +232,10 @@
         <p>(+84) 034 958 0476</p>
         <p>(+84) 034 958 0416</p>
         <div class="social-icons">
-          <img src="img/footer/social/face.svg" />
-          <img src="img/footer/social/ins.svg" />
-          <img src="img/footer/social/messenger.svg" />
-          <img src="img/footer/social/tiktok.svg" />
+          <img src="../../img/footer/social/face.svg" />
+          <img src="../../img/footer/social/ins.svg" />
+          <img src="../../img/footer/social/messenger.svg" />
+          <img src="../../img/footer/social/tiktok.svg" />
         </div>
       </div>
       <div class="footer-section">
@@ -257,18 +267,18 @@
         <div class="subscribe-box">
           <input id="email-input" type="email" placeholder="Your email" />
           <button id="submit-button" style="background: none; border: none; padding: 0;">
-            <img src="img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
+            <img src="../../img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
           </button>
         </div>
         <div id="message" style="margin-top: 8px; font-size: 14px;"></div>
         <script src="js/footer.js"></script>
         <h4>Chấp nhận thanh toán</h4>
         <div class="payment-icons">
-          <img src="img/footer/icon.png" />
+          <img src="../../img/footer/icon.png" />
         </div>
       </div>
     </footer>
-    <script src="/js/script.js"></script>
-    <script src="/js/responsive.js"></script>
+    <script src="../../js/script.js"></script>
+    <script src="../../js/responsive.js"></script>
 </body>
 </html>
